# pgs-recon

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTEXT.md  Dockerfile  LICENSE  README.md  photogrammetry.py  requirements.txt  setup.cfg  setup.py  slurm_photogrammetry.sh
.github/workflows/: build_docker.yml
apptainer/: buildargs-cuda12.4.env  buildargs-cuda12.8.env  pgs-recon.def  submit_recon.sh  submit_recon_pipeline.sh
ci/: apt-ubuntu-focal  apt-ubuntu-jammy
cmake/: BuildCGAL.cmake  BuildEigen.cmake  BuildJPEG.cmake  BuildOpenCV.cmake  BuildOpenMVG.cmake  BuildOpenMVS.cmake  BuildVCG.cmake  FindGMP.cmake  FindNASM.cmake
dependencies/: CMakeLists.txt
dependencies/cmake/: BuildCGAL.cmake  BuildCeres.cmake  BuildEigen.cmake  BuildJPEG.cmake  BuildOpenCV.cmake  BuildOpenMVG.cmake  BuildOpenMVS.cmake  BuildPGSUtils.cmake  BuildVCG.cmake
dependencies/patches/: VCG-RemoveTemplate.diff  openMVG-v1.6-UpdateSensorDB.diff  openMVG-v2.1-FixExpectOpenMP.diff  openMVS-v1.1-FixDeps.diff  openMVS-v2.3-FixCPP20.diff  openMVS-v2.3-FixFindBoost.diff
dependencies/utilities/: CMakeLists.txt
dependencies/utilities/src/: RANSAC.hpp  gen_aruco_markers.cpp  global_scaler.cpp  global_scaler_io.cpp  global_scaler_io.hpp  marker_detection.cpp  marker_detection.hpp  marker_types.hpp  sfm_orient.cpp
docs/adr/: 0001-retexture-with-alternate-modality.md  0002-calibrate-new-camera-for-retexture.md
graphics/: logo.ai
patches/: openMVG-835f1e5-FixEigenLinking.diff  openMVG-835f1e5-UpdateSensorDB.diff  openMVG-v1.6-UpdateSensorDB.diff  openMVS-afe30ae-FindCGAL.diff
pgs_recon/: __init__.py  openmvg.py  openmvs.py  pgs_data.py  reconstruct.py  sfm.py  utility.py
pgs_recon/apps/: calibrate.py  center_mesh.py  convert.py  detect_missing.py  filter_small_components.py  generate_mask.py  list_complete.py  quality_check.py  reconstruct.py  remove_ground_plane.py  retexture.py  scan_info.py
pgs_recon/utils/: apps.py  charuco.py  educelab.py  geometry.py  quality.py  wavefront.py
scripts/: build_docker.sh  extract_views.py
singularity/: pgs-recon.def  pgs_recon.def  submit.sh  submit_recon.sh  submit_recon_pipeline.sh  submit_single_recon.sh  submit_unsubmitted.sh
utils/: calc_test_rig_positions.py
