[metadata]
name = PGSRecon
version = 1.1.0
author = Seth Parker
author_email = c.seth.parker@uky.edu
description = A photogrammetry reconstruction pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.vis.uky.edu/seales-research/photogrammetry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    configargparse
    numpy
    PyExifTool
    PySfMUtils
    scipy
python_requires = >=3.6

[options.packages.find]
include = pgs_recon*

[options.entry_points]
console_scripts =
    pgs-recon = pgs_recon.reconstruct:main
    pgs-import = pgs_recon.pgs_data:main