[metadata]
name = pgs-recon
version = 1.2.0
author = Seth Parker
author_email = c.seth.parker@uky.edu
description = A photogrammetry reconstruction pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/educelab/pgs-recon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    configargparse
    numpy
    opencv-contrib-python
    PyExifTool
    PySfMUtils
    scipy
    vtk
python_requires = >=3.9

[options.packages.find]
include = pgs_recon*

[options.entry_points]
console_scripts =
    pgs-recon = pgs_recon.apps.reconstruct:main
    pgs-import = pgs_recon.pgs_data:main
    pgs-convert = pgs_recon.apps.convert:main
    pgs-center = pgs_recon.apps.center_mesh:main