[metadata]
name = pgs-recon
version = 1.5.0
author = Seth Parker
author_email = c.seth.parker@uky.edu
description = A photogrammetry reconstruction pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/educelab/pgs-recon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires = file:requirements.txt
python_requires = >=3.9

[options.packages.find]
include = pgs_recon*

[options.entry_points]
console_scripts =
    pgs-recon = pgs_recon.apps.reconstruct:main
    pgs-import = pgs_recon.pgs_data:main
    pgs-convert = pgs_recon.apps.convert:main
    pgs-center = pgs_recon.apps.center_mesh:main
    pgs-list-complete = pgs_recon.apps.list_complete:main
    pgs-info = pgs_recon.apps.scan_info:main
    pgs-detect-missing = pgs_recon.apps.detect_missing:main
    pgs-quality-check = pgs_recon.apps.quality_check:main
    pgs-detect-boards = pgs_recon.utils.educelab:main
    pgs-generate-mask = pgs_recon.apps.generate_mask:main
    pgs-remove-ground-plane = pgs_recon.apps.remove_ground_plane:main